--- a/build-lab1-Desktop_Qt_5_12_9_MinGW_64_bit-Debug/Makefile
+++ b/build-lab1-Desktop_Qt_5_12_9_MinGW_64_bit-Debug/Makefile
@@ -210,6 +210,7 @@ Makefile: ../lab1/lab1.pro C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/win32-g++/qm
 		C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/qt_config.prf \
 		C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/win32-g++/qmake.conf \
 		C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/exclusive_builds.prf \
 		C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/toolchain.prf \
 		C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/default_pre.prf \
@@ -376,6 +377,7 @@ C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/qt_functions.prf:
 C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/qt_config.prf:
 C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/win32-g++/qmake.conf:
 C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/exclusive_builds.prf:
 C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/toolchain.prf:
 C:/Qt/Qt5.12.9/5.12.9/mingw73_64/mkspecs/features/default_pre.prf:
