--- a/build-lab1-Desktop_Qt_5_12_9_MinGW_64_bit-Debug/Makefile.Release
+++ b/build-lab1-Desktop_Qt_5_12_9_MinGW_64_bit-Debug/Makefile.Release
@@ -101,7 +101,7 @@ compiler_clean:
 
 ####### Compile
 
-release/main.o: ../lab1/main.cpp 
+release/main.o: ../lab1/main.cpp ../lab1/train.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o release\main.o ..\lab1\main.cpp
 
 release/train.o: ../lab1/train.cpp ../lab1/train.h
